--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.47.0",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^10.0.5",
     "semantic-ui-react": "^2.1.5",
     "simplebar-react": "^3.2.4"
   },
