--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,6 +4,9 @@
   "licence": "MIT",
   "version": "1.8.0",
   "private": false,
+  "engines": {
+  "node": ">=18"
+  },
   "scripts": {
     "dev": "vite",
     "start": "vite preview",
