--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dist": "^0.1.2",
+    "esbuild": "^0.24.2",
     "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
@@ -70,7 +71,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.6",
-    "vite": "^4.5.3",
+    "vite": "^6.0.7",
     "vite-plugin-checker": "^0.6.2"
   }
 }
