--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,9 +4,6 @@
   "licence": "MIT",
   "version": "1.8.0",
   "private": false,
-  "engines": {
-  "node": "18.x"
-  },
   "scripts": {
     "dev": "vite",
     "start": "vite preview",
@@ -34,11 +31,9 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "apexcharts": "^3.43.0",
     "bootstrap": "^5.3.3",
-    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dist": "^0.1.2",
     "history": "^5.3.0",
-    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^7.2.0",
     "numeral": "^2.0.6",
@@ -52,13 +47,12 @@
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
+    "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.4.0",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8.51.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
@@ -70,9 +64,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "postcss": "^8.4.38",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.6",
     "vite": "^4.4.11",
     "vite-plugin-checker": "^0.6.2"
   }
