--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,4 +1,6 @@
+absl-py==2.1.0
 albumentations==1.3.1
+astunparse==1.6.3
 bcrypt==4.1.2
 blinker==1.7.0
 certifi==2024.2.2
@@ -7,35 +9,50 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cryptography==42.0.5
+dnspython==2.7.0
 filelock==3.13.1
 Flask==3.0.2
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-Mail==0.9.1
+flatbuffers==24.3.25
 fsspec==2024.2.0
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.62.2
+h5py==3.11.0
 idna==3.6
 imageio==2.33.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 joblib==1.3.2
+keras==3.3.2
 lazy_loader==0.3
+libclang==18.1.1
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+ml-dtypes==0.3.2
 mpmath==1.3.0
 mss==9.0.1
 mysql-connector-python==8.3.0
+namex==0.0.8
 networkx==3.2.1
 numpy==1.26.4
 opencv-python==4.9.0.80
 opencv-python-headless==4.9.0.80
+opt-einsum==3.3.0
+optree==0.11.0
 packaging==23.2
 pandas==2.2.0
 pillow==10.2.0
+protobuf==4.25.3
 pyarrow==15.0.0
 pycparser==2.21
 Pygments==2.17.2
 PyJWT==2.8.0
+pymongo==4.10.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2024.1
@@ -49,6 +66,12 @@ scipy==1.12.0
 shellingham==1.5.4
 six==1.16.0
 sympy==1.12
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-intel==2.16.1
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
 thread==0.1.3
 threadpoolctl==3.2.0
 tifffile==2024.1.30
@@ -59,3 +82,4 @@ typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.2.0
 Werkzeug==3.0.1
+wrapt==1.16.0
