--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,9 +1,6 @@
 {
     "version": 2,
-    "builds": [
-        {"src": "app.py", "use": "@vercel/python"}
-    ],
     "routes": [
-        {"src": "/(.*)", "dest": "base.py"}
+        {"src": "/(.*)", "dest": "/"}
     ]
 }
