--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -69,7 +69,7 @@ sympy==1.12
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
-tensorflow-intel==2.16.1
+# tensorflow-intel==2.16.1
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 thread==0.1.3
