--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -17,6 +17,7 @@ Flask-Cors==4.0.0
 Flask-Mail==0.9.1
 flatbuffers==24.3.25
 fsspec==2024.2.0
+gunicorn==23.0.0
 gast==0.5.4
 google-pasta==0.2.0
 grpcio==1.62.2
