--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -3,6 +3,8 @@ albumentations==1.3.1
 astunparse==1.6.3
 bcrypt==4.1.2
 blinker==1.7.0
+boto3==1.36.0
+botocore==1.36.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -15,17 +17,19 @@ Flask==3.0.2
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-Mail==0.9.1
+Flask-S3==0.3.3
 flatbuffers==24.3.25
 fsspec==2024.2.0
-gunicorn==23.0.0
 gast==0.5.4
 google-pasta==0.2.0
 grpcio==1.62.2
+gunicorn==23.0.0
 h5py==3.11.0
 idna==3.6
 imageio==2.33.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
+jmespath==1.0.1
 joblib==1.3.2
 keras==3.3.2
 lazy_loader==0.3
@@ -61,6 +65,7 @@ PyYAML==6.0.1
 qudida==0.0.4
 requests==2.31.0
 rich==13.7.0
+s3transfer==0.11.0
 scikit-image==0.22.0
 scikit-learn==1.4.0
 scipy==1.12.0
@@ -81,6 +86,6 @@ torchvision==0.17.0
 typer==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.4
-urllib3==2.2.0
+urllib3==2.3.0
 Werkzeug==3.0.1
 wrapt==1.16.0
